Fix weird spacing and padding with Checkbox when focused (with/without a label).

--- a/MemoryMosaic/Styles/Components/Input/Checkbox.scss
+++ b/MemoryMosaic/Styles/Components/Input/Checkbox.scss
@@ -4,13 +4,18 @@
 	@include flex-row;
 	width: fit-content;
 	height: fit-content;
+	padding-top: 2px;
+	padding-bottom: 2px;
 
 	> span {
 		white-space: nowrap;
 		margin-left: 2px;
 		margin-right: 2px;
 
-		&:last-of-type { margin-top: -1px; }
+		&:nth-of-type(2) {
+			margin-top: -1px;
+			padding-right: 4px;
+		}
 	}
 
 	&:focus-visible {
